[gd_scene load_steps=3 format=3 uid="uid://duwv4x53h2i5t"]

[ext_resource type="Script" uid="uid://y2mfxa0fad51" path="res://Scenes/escena_1.gd" id="1_6b764"]
[ext_resource type="VideoStream" uid="uid://dtdd8c43qttcu" path="res://Assets/videos/mi_video.ogv" id="2_pypvf"]

[node name="Escena1" type="Node2D"]
script = ExtResource("1_6b764")

[node name="Fondo" type="TextureRect" parent="."]
offset_right = 1156.0
offset_bottom = 651.0
expand_mode = 3
metadata/_edit_group_ = true

[node name="VideoFinal" type="VideoStreamPlayer" parent="Fondo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -382.0
offset_top = -214.0
offset_right = 382.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("2_pypvf")

[node name="Panel" type="Panel" parent="."]
offset_left = 17.0
offset_top = 500.0
offset_right = 1135.0
offset_bottom = 639.0
metadata/_edit_group_ = true

[node name="DialogoLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 16.0
offset_top = 35.0
offset_right = 1102.0
offset_bottom = 144.0

[node name="NombreLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 10.0
offset_top = 6.0
offset_right = 111.0
offset_bottom = 29.0

[node name="DialogoSecundarioLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
